@@ -4,21 +4,21 @@ from __future__ import division
 import numpy as np
 
 from .control import model_setup
-from .cp_confocal import threed
+from .cp_confocal import twod
 from .cp_triplet import trip
 from .cp_mix import double_pnum
 
 
-# 3D + 3D + Triplet Gauß
-# Model 6043
-def CF_Gxyz_gauss_3D3DTT(parms, tau):
+# 2D + 2D + TT Gauß
+# Model 6044
+def CF_Gxyz_gauss_2D2DTT(parms, tau):
     u""" Two-component three-dimensional free diffusion
         with a Gaussian laser profile, including two triplet components.
         The triplet factor takes into account a blinking term.
         Set *T* or *τ_trip* to 0, if no triplet component is wanted.
 
-        particle1 = F₁/( (1+τ/τ₁) * sqrt(1+τ/(τ₁*SP²)))
-        particle2 = α*(1-F₁)/( (1+τ/τ₂) * sqrt(1+τ/(τ₂*SP²)))
+        particle1 = F₁/(1+τ/τ₁)
+        particle2 = α²*(1-F₁)/(1+τ/τ₂)
         triplet1 = 1 + T₁/(1-T₁)*exp(-τ/τ_trip₁)
         triplet2 = 1 + T₂/(1-T₂)*exp(-τ/τ_trip₂)
         norm = (F₁ + α*(1-F₁))²
@@ -32,42 +32,37 @@ def CF_Gxyz_gauss_3D3DTT(parms, tau):
         [2]  τ₂       Diffusion time of particle species 2
         [3]  F₁       Fraction of molecules of species 1 (n₁ = n*F₁)
                       0 <= F₁ <= 1
-        [4]  SP       SP=z₀/r₀, Structural parameter,
-                      describes elongation of the confocal volume
-        [5]  α        Relative molecular brightness of particle
+        [4]  α        Relative molecular brightness of particle
                       2 compared to particle 1 (α = q₂/q₁)
-        [6]  τ_trip₁  Characteristic residence time in triplet state
-        [7]  T₁       Fraction of particles in triplet (non-fluorescent) state
+        [5]  τ_trip₁  Characteristic residence time in triplet state
+        [6]  T₁       Fraction of particles in triplet (non-fluorescent) state
                       0 <= T < 1
-        [8]  τ_trip₂  Characteristic residence time in triplet state
-        [9]  T₂       Fraction of particles in triplet (non-fluorescent) state
+        [7]  τ_trip₂  Characteristic residence time in triplet state
+        [8]  T₂       Fraction of particles in triplet (non-fluorescent) state
                       0 <= T < 1
-        [10] offset
+        [9]  offset
         *tau* - lag time
     """
     n=parms[0]
     taud1=parms[1]
     taud2=parms[2]
     F=parms[3]
-    SP=parms[4]
-    alpha=parms[5]
-    tautrip1=parms[6]
-    T1=parms[7]
-    tautrip2=parms[8]
-    T2=parms[9]
-    off=parms[10]
+    alpha=parms[4]
+    tautrip1=parms[5]
+    T1=parms[6]
+    tautrip2=parms[7]
+    T2=parms[8]
+    off=parms[9]
 
     g = double_pnum(n=n,
                     F1=F,
                     alpha=alpha,
-                    comp1=threed,
-                    comp2=threed,
+                    comp1=twod,
+                    comp2=twod,
                     kwargs1={"tau":tau,
-                             "taudiff":taud1,
-                             "SP":SP},
+                             "taudiff":taud1},
                     kwargs2={"tau":tau,
-                             "taudiff":taud2,
-                             "SP":SP},
+                             "taudiff":taud2},
                     )
 
     tr1 = trip(tau=tau, T=T1, tautrip=tautrip1)
@@ -80,8 +75,8 @@ def CF_Gxyz_gauss_3D3DTT(parms, tau):
 
 def supplements(parms, countrate=None):
     u"""Supplementary parameters:
-        [11] n₁ = n*F₁     Particle number of species 1
-        [12] n₂ = n*(1-F₁) Particle number of species 2
+        [10]  n₁ = n*F₁     Particle number of species 1
+        [11] n₂ = n*(1-F₁) Particle number of species 2
     """
     # We can only give you the effective particle number
     n = parms[0]
@@ -103,7 +98,6 @@ parms = [
             5,       # taud1
             1000,    # taud2
             0.5,     # F
-            5,       # SP
             1.0,     # alpha
             0.002,   # tautrip1
             0.01,    # T1
@@ -118,23 +112,22 @@ boundaries = [[0, np.inf]]*len(parms)
 # F
 boundaries[3] = [0,.9999999999999]
 # T
-boundaries[7] = [0,.9999999999999]
-boundaries[9] = [0,.9999999999999]
+boundaries[6] = [0,.9999999999999]
+boundaries[8] = [0,.9999999999999]
 boundaries[-1] = [-np.inf, np.inf]
 
 
 model_setup(
-             modelid=6043,
-             name="Separate 3D diffusion with double triplet (confocal)",
-             comp="T+T+3D+3D",
+             modelid=6044,
+             name="Separate 2D diffusion with double triplet (confocal)",
+             comp="T+T+2D+2D",
              mtype="Confocal (Gaussian) with double triplet",
-             fctn=CF_Gxyz_gauss_3D3DTT,
+             fctn=CF_Gxyz_gauss_2D2DTT,
              par_labels=[
                             u"n",
                             u"τ"+u"\u2081"+" [ms]",
                             u"τ"+u"\u2082"+" [ms]",
-                            u"F"+u"\u2081", 
-                            u"SP",
+                            u"F"+u"\u2081",
                             u"\u03b1"+" (q"+u"\u2082"+"/q"+u"\u2081"+")", 
                             u"τ_trip₁ [ms]",
                             u"T₁",
@@ -143,15 +136,14 @@ model_setup(
                             u"offset"
                             ],
              par_values=parms,
-             par_vary=[True, True, True, True, False, False, False, False, False, False, False],
+             par_vary=[True, True, True, True, False, False, False, False, False, False],
              par_boundaries=boundaries,
-             par_constraints=[[2, ">", 1], [6, "<", 1], [8, "<", 6]],
+             par_constraints=[[2, ">", 1], [5, "<", 1], [7, "<", 5]],
              par_hr_labels=[
                             u"n",
                             u"τ₁ [ms]",
                             u"τ₂ [ms]",
-                            u"F₁", 
-                            u"SP",
+                            u"F₁",
                             u"\u03b1"+u" (q₂/q₁)", 
                             u"τ_trip₁ [µs]",
                             u"T₁",
@@ -164,7 +156,6 @@ model_setup(
                             1.,     # taud1
                             1.,     # taud2
                             1.,     # F
-                            1.,     # SP
                             1.,     # alpha
                             1000.,  # tautrip1 [µs]
                             1.,     # T1
