@@ -1,6 +1,7 @@
 0.9.6
 - New confocal fitting models:
   - 3D+3D, 2D+2D, 3D+2D (no triplet)
+  - T+T+2D+2D, T+T+3D+2D (double triplet)
   - T+3D+3D+3D
 - Under the hood:
   - Separation of core and GUI modules
